--- a/Makefile.wii
+++ b/Makefile.wii
@@ -36,7 +36,7 @@ LIBS	:= -lwiiuse -lbte -lvorbisidec -logg -lgrrlib -lasnd -logc -lm -lz -lfat
 # list of directories containing libraries, this must be the top level containing
 # include and lib
 #---------------------------------------------------------------------------------
-LIBDIRS	:= $(PORTLIBS) ./lib
+LIBDIRS	:= $(PORTLIBS) ./lib/wii
 
 #---------------------------------------------------------------------------------
 # no real need to edit anything past this point unless you need to add additional
