--- a/Makefile.wii
+++ b/Makefile.wii
@@ -17,7 +17,7 @@ include $(DEVKITPPC)/wii_rules
 #---------------------------------------------------------------------------------
 TARGET		:=	$(notdir $(CURDIR))
 BUILD		:=	build_wii
-SOURCES		:=	core
+SOURCES		:=	core plat/wii
 DATA		:=	data
 INCLUDES	:=	include
 
@@ -93,7 +93,7 @@ $(BUILD): lib
 #---------------------------------------------------------------------------------
 clean:
 	@echo clean ...
-	@rm -fr $(BUILD) lib
+	@rm -fr $(BUILD) lib/wii
 
 #---------------------------------------------------------------------------------
 else
